Fix Bug 416306 - send later agent wrongly store sended message to local storage

BUG: 416306
FIXED-IN: 5.14.0