messagecomposer/src/sender/akonadisender.cpp
@@ -34,6 +34,8 @@
 #include <mailtransport/transport.h>
 #include <mailtransport/transportmanager.h>
 #include <MessageCore/StringUtil>
+#include <KIdentityManagement/Identity>
+#include <KIdentityManagement/IdentityManager>
 
 using namespace KMime::Types;
 using namespace KPIM;
@@ -137,6 +139,26 @@ void AkonadiSender::sendOrQueueMessage(const KMime::Message::Ptr &message, Messa
         qjob->sentBehaviourAttribute().setSentBehaviour(
             SentBehaviourAttribute::MoveToCollection);
         const int sentCollectionId = hrd->asUnicodeString().toInt();
+        qjob->sentBehaviourAttribute().setMoveToCollection(
+            Akonadi::Collection(sentCollectionId));
+    } else if (auto hrd = message->headerByType("X-KMail-Identity")) {
+        KIdentityManagement::IdentityManager *im = KIdentityManagement::IdentityManager::self();
+        const QString identityStrId = hrd->asUnicodeString();
+        const KIdentityManagement::Identity id = im->modifyIdentityForUoid(identityStrId.toUInt());
+        const QString fccId = id.fcc();
+        qjob->sentBehaviourAttribute().setSentBehaviour(
+            SentBehaviourAttribute::MoveToCollection);
+        const int sentCollectionId = fccId.toInt();
+        qjob->sentBehaviourAttribute().setMoveToCollection(
+            Akonadi::Collection(sentCollectionId));
+    } else if (auto hrd = message->headerByType("X-KMail-Identity-Name")) {
+        KIdentityManagement::IdentityManager *im = KIdentityManagement::IdentityManager::self();
+        const QString identityStrName = hrd->asUnicodeString();
+        const KIdentityManagement::Identity id = im->modifyIdentityForName(identityStrName);
+        const QString fccId = id.fcc();
+        qjob->sentBehaviourAttribute().setSentBehaviour(
+            SentBehaviourAttribute::MoveToCollection);
+        const int sentCollectionId = fccId.toInt();
         qjob->sentBehaviourAttribute().setMoveToCollection(
             Akonadi::Collection(sentCollectionId));
     } else {
